force-app/main/default/objects/GfTaxInvoice__c/GfTaxInvoice__c.object-meta.xml
<CustomObject>
    <label>세금계산서</label>
    <nameField>
        <displayFormat>TAX-{YYYYMM}{0000000}</displayFormat>
        <label>Tax Invoice SEQ</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>