force-app/main/default/objects/GfTaxInvoice__c/fields/CashAmount__c.field-meta.xml
<CustomField>
    <fullName>CashAmount__c</fullName>
    <label>Cash Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>