force-app/main/default/objects/GfTaxInvoice__c/fields/CheckAmount__c.field-meta.xml
<CustomField>
    <fullName>CheckAmount__c</fullName>
    <label>Check Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>