force-app/main/default/objects/GfTaxInvoice__c/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>