force-app/main/default/objects/GfTaxInvoice__c/fields/DealerAccountID__c.field-meta.xml
<CustomField>
    <fullName>DealerAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gf Tax Invoice</relationshipLabel>
    <relationshipName>Gf_Tax_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>