force-app/main/default/objects/GfTaxInvoice__c/fields/DealerAccountName__c.field-meta.xml
<CustomField>
    <fullName>DealerAccountName__c</fullName>
    <formula>DealerAccountID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Account Name</label>
    <type>Text</type>
</CustomField>