force-app/main/default/objects/GfTaxInvoice__c/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <label>Discription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>