force-app/main/default/objects/GfTaxInvoice__c/fields/NameofPersoninCharge__c.field-meta.xml
<CustomField>
    <fullName>NameofPersoninCharge__c</fullName>
    <label>Name of Person in Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>