force-app/main/default/objects/GfTaxInvoice__c/fields/NoteAmount__c.field-meta.xml
<CustomField>
    <fullName>NoteAmount__c</fullName>
    <label>Note Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>