force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveAddress__c.field-meta.xml
<CustomField>
    <fullName>ReceiveAddress__c</fullName>
    <label>Receive Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>