force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveBusinessKind__c.field-meta.xml
<CustomField>
    <fullName>ReceiveBusinessKind__c</fullName>
    <label>Receive Business Kind</label>
    <length>50</length>
    <type>Text</type>
</CustomField>