force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveBusinessType__c.field-meta.xml
<CustomField>
    <fullName>ReceiveBusinessType__c</fullName>
    <label>Receive Business Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>