force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveName__c.field-meta.xml
<CustomField>
    <fullName>ReceiveName__c</fullName>
    <label>Receive Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>