force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveRegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>ReceiveRegistrationNo__c</fullName>
    <label>Receive Registration No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>