force-app/main/default/objects/GfTaxInvoice__c/fields/ReceiveTradeName__c.field-meta.xml
<CustomField>
    <fullName>ReceiveTradeName__c</fullName>
    <label>Receive Trade Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>