force-app/main/default/objects/GfTaxInvoice__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>