force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyAddress__c.field-meta.xml
<CustomField>
    <fullName>SuplyAddress__c</fullName>
    <label>Suply Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>