force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyBusinessKind__c.field-meta.xml
<CustomField>
    <fullName>SuplyBusinessKind__c</fullName>
    <label>Suply Business Kind</label>
    <length>50</length>
    <type>Text</type>
</CustomField>