force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyBusinessType__c.field-meta.xml
<CustomField>
    <fullName>SuplyBusinessType__c</fullName>
    <label>Suply Business Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>