force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyName__c.field-meta.xml
<CustomField>
    <fullName>SuplyName__c</fullName>
    <label>Suply Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>