force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyRegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>SuplyRegistrationNo__c</fullName>
    <label>Suply Registration No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>