force-app/main/default/objects/GfTaxInvoice__c/fields/SuplyTradeName__c.field-meta.xml
<CustomField>
    <fullName>SuplyTradeName__c</fullName>
    <label>Suply Trade Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>