force-app/main/default/objects/GfTaxInvoice__c/fields/Supply_Price__c.field-meta.xml
<CustomField>
    <fullName>Supply_Price__c</fullName>
    <label>Supply Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>