force-app/main/default/objects/GfTaxInvoice__c/fields/TaxInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxInvoiceNumber__c</fullName>
    <label>Tax Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>